# PythonSeleniumKirmiziBultenArananlar

./: Readme.md  arananlar.csv  main.py  pyproject.toml
